--- a/сайт.html
+++ b/сайт.html
@@ -13,7 +13,7 @@
     <th> 
                 <h1>Визитка</h1>
                 <h2>Обо мне</h2>
-        <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee иии </p>
+        <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee иииbbb </p>
         <p>Решил освоить новую профессию так как устал работать в общепите</p>
         <img src="https://lh3.googleusercontent.com/a/AAcHTtfjHYHXIukJcOJrcUNNPAwIA1JBSoMC5r9gxrYy=s360-c-no">
     </tr>
