--- a/adout.html
+++ b/adout.html
@@ -7,6 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div style="background-color: aquamarine; color: brown;">
+            <h3>Первая статья</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam ullam, animi error molestias quis deleniti aperiam impedit reiciendis velit, laudantium id! Cum quis eius modi vitae aspernatur veritatis ea dignissimos dolores qui nisi! Soluta, vel. Itaque aliquam nemo dolor sapiente consectetur dignissimos officia non, sit minima eveniet ex minus possimus!</p>
+        </div>
+        <div style="background-color: bisque;">
+            <h3>Вторая статья</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quibusdam. Placeat, laudantium earum? Sunt aperiam esse, at alias maiores id.</p>
+        </div>
+    </main>
+    <footer>
+        <div>
+            <p> </p>
+        </div>
+    </footer>
 </body>
 </html>
