--- a/сайт.html
+++ b/сайт.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html> <!-- Объявление формата документа -->
 <html>
+
 <head> <!-- Техническая информация о документе -->
-<meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
-<title>Сайт визитка</title> <!-- Задаем заголовок документа -->
-<link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
-<script src="script.js"></script> <!-- Подключаем сценарии -->
+    <meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
+    <title>Сайт визитка</title> <!-- Задаем заголовок документа -->
+    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
+    <script src="script.js"></script> <!-- Подключаем сценарии -->
 </head>
+
 <body> <!-- Основная часть документа -->
-    <table
-    align="center">
-    <tr>
-    <th> 
-                <h1>Визитка</h1>
-                <h2>Обо мне</h2>
-        <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee  </p>
-        <p>Решил освоить новую профессию так как устал работать в общепите</p>
-        <img src="https://lh3.googleusercontent.com/a/AAcHTtfjHYHXIukJcOJrcUNNPAwIA1JBSoMC5r9gxrYy=s360-c-no">
-    </tr>
-    </th>     
-    </table>
+    <footer>
+        <div style="text-align: center;">
+            <tr>
+                <th>
+                    <fieldset>
+                        <em>
+                            <h1>Визитка</h1>
+                        </em>
+
+                        <h2>Обо мне</h2>
+
+                        <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee </p>
+                        <p>Решил освоить новую профессию так как устал работать в общепите</p>
+                        <button></button>
+                        <img src="https://lh3.googleusercontent.com/a/AAcHTtfjHYHXIukJcOJrcUNNPAwIA1JBSoMC5r9gxrYy=s360-c-no">
+            </tr>
+            </th>
+            </fieldset>
+        </div>
+    </footer>
 </body>
+
 </html>
