--- a/adout.html
+++ b/adout.html
@@ -19,11 +19,13 @@
     <main>
         <div style="background-color: aquamarine; color: brown; text-align: center;">
             <h3>Первая статья</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam ullam, animi error molestias quis deleniti aperiam impedit reiciendis velit, laudantium id! Cum quis eius modi vitae aspernatur veritatis ea dignissimos dolores qui nisi! Soluta, vel. Itaque aliquam nemo dolor sapiente consectetur dignissimos officia non, sit minima eveniet ex minus possimus!</p>
+            <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee</p>
+            <br> <p>Решил освоить новую профессию так как устал работать в общепите</p> </br>
         </div>
         <div style="background-color: bisque; text-align: center">
-            <h3>Вторая статья</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quibusdam. Placeat, laudantium earum? Sunt aperiam esse, at alias maiores id.</p>
+            <img src="https://lh3.googleusercontent.com/a/AAcHTtfjHYHXIukJcOJrcUNNPAwIA1JBSoMC5r9gxrYy=s360-c-no">
+            <h3></h3>
+            <p></p>
         </div>
     </main>
     <footer>
