--- a/adout.html
+++ b/adout.html
@@ -10,14 +10,14 @@
     <header>
         <nav>
             <ul>
-                <li>1</li>
+                <li>1</li> 
                 <li>2</li>
                 <li>3</li>
             </ul>
         </nav>
     </header>
     <main>
-        <div style="background-color: aquamarine; color: brown; text-align: center;">
+        <div style="background-color: aqua; text-align: center;">
             <h3>Первая статья</h3>
             <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee</p>
             <br> <p>Решил освоить новую профессию так как устал работать в общепите</p> </br>
