--- a/adout.html
+++ b/adout.html
@@ -23,9 +23,8 @@
             <br> <p>Решил освоить новую профессию так как устал работать в общепите</p> </br>
         </div>
         <div style="background-color: bisque; text-align: center">
-            <img src="https://lh3.googleusercontent.com/a/AAcHTtfjHYHXIukJcOJrcUNNPAwIA1JBSoMC5r9gxrYy=s360-c-no">
-            <h3></h3>
-            <p></p>
+            <h3>ikkikik</h3>
+            <p>yhyhhyh</p>
         </div>
     </main>
     <footer>
