--- a/adout.html
+++ b/adout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,7 +18,9 @@
         </nav>
     </header>
     <main>
+     <h1 id="one">one</h1>
         <div style="background-color: aqua; text-align: center;">
+           
             <h3>Первая статья</h3>
             <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee</p>
             <br> <p>Решил освоить новую профессию так как устал работать в общепите</p> </br>
