--- a/adout.html
+++ b/adout.html
@@ -19,15 +19,15 @@
     </header>
     <main>
      <h1 id="one">one</h1>
-        <div style="background-color: aqua; text-align: center;">
+        <div style="background-color: rgb(197, 188, 201); text-align: center;">
            
             <h3>Первая статья</h3>
-            <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee</p>
+            <p>Привет!<b> Меня зовут Антон.</b> Мне 23 года работаю в Surf Coffee</p>
             <br> <p>Решил освоить новую профессию так как устал работать в общепите</p> </br>
+            <hr><hr>
         </div>
         <div style="background-color: bisque; text-align: center">
             <h3>ikkikik</h3>
-            <p>yhyhhyh</p>
         </div>
     </main>
     <footer>
