--- a/сайт.html
+++ b/сайт.html
@@ -23,7 +23,8 @@
                         <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee </p>
                         <p>Решил освоить новую профессию так как устал работать в общепите</p>
                         <button></button>
-                        <img src="https://lh3.googleusercontent.com/a/AAcHTtfjHYHXIukJcOJrcUNNPAwIA1JBSoMC5r9gxrYy=s360-c-no">
+                        <img
+                            src="https://lh3.googleusercontent.com/a/AAcHTtfjHYHXIukJcOJrcUNNPAwIA1JBSoMC5r9gxrYy=s360-c-no">
             </tr>
             </th>
             </fieldset>
