--- a/dz2.html
+++ b/dz2.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div style="text-align: center;">
+            <h1>HTML Tutorial</h1>
+            <hr>
+        </div>
+    </header>
+    <main>
+        <div style="text-align: center;">
+            <h1>What is HTML?</h1>
+            <p> <b>Hypertext Markup Language (HTML)</b> is the standard markup language for creating web pages and web applications.</p>
+            <p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
+            <hr>
+            <h1>Markup</h1>
+            <p>
+            </p>
+        </div>
+    </main>
 </body>
 </html>
