--- a/dz.html
+++ b/dz.html
@@ -31,7 +31,7 @@
               <br>  The which if you with patient ears attend,
               <br>  What here shall miss, our toil shall strive to mend.
               <h2>SCENE I. Verona. A public place.</h2> 
-              <p>Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</p>
+              <p><i>Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</i></p>
               <h2>SAMPSON</h2>
               <p>Gregory, o' my word, we'll not carry coals.</p>
               <h2>GREGORY</h2>
