--- a/dz2.html
+++ b/dz2.html
@@ -16,8 +16,10 @@
     <main>
         <div style="text-align: center;">
             <h1>What is HTML?</h1>
-            <p> <b>Hypertext Markup Language (HTML)</b> is the standard markup language for creating web pages and web applications.</p>
-            <p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
+            <p> <b>Hypertext Markup Language <u>(HTML)</u></b> is the standard markup language for creating web pages and web applications.</p>
+            <p>Web browsers receive <u>HTML</u> documents from a web server or from local storage and render the documents into multimedia web pages. <u>HTML</u> describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
+            <p><u>HTML</u> elements are the building blocks of <u>HTML</u> pages. With <u>HTML</u>constructs, images and other objects such as interactive forms may be embedded into the rendered page. <u>HTML</u> provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. <u>HTML</u> elements are delineated by tags, written using angle brackets. Tags such as <img /> and <input /> directly introduce content into the page. Other tags such as <p> surround and provide information about document text and may include other tags as sub-elements. Browsers do not display the <u>HTML</u> tags, but use them to interpret the content of the page.
+            </p>
             <hr>
             <h1>Markup</h1>
             <p>
