--- a/dz1.html
+++ b/dz1.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div style="text-align: center;">
-            <h1>Romeo and Juliet</h1>
+            <h1 id="NAME"> Romeo and Juliet</h1>
         </div>
     </header>
     <main>
         <div>
             <h2>ACT 1</h2>
             <h2>PROLOGUE</h2>
-             Two households, both alike in dignity,
-              <br>  In fair Verona, where we lay our scene,
-              <br> From ancient grudge break to new mutiny,
-              <br> Where civil blood makes civil hands unclean.
-              <br> From forth the fatal loins of these two foes
-              <br> A pair of star-cross'd lovers take their life;
-              <br> Whose misadventured piteous overthrows
-              <br>  Do with their death bury their parents' strife.
-              <br>  The fearful passage of their death-mark'd love,
-              <br>  And the continuance of their parents' rage,
-              <br> Which, but their children's end, nought could remove,
-              <br>  Is now the two hours' traffic of our stage;
-              <br>  The which if you with patient ears attend,
-              <br>  What here shall miss, our toil shall strive to mend.
+<pre>
+In fair Verona, where we lay our scene,
+From ancient grudge break to new mutiny,
+Where civil blood makes civil hands unclean.
+From forth the fatal loins of these two foes
+A pair of star-cross'd lovers take their life;
+Whose misadventured piteous overthrows
+Do with their death bury their parents' strife.
+The fearful passage of their death-mark'd love,
+And the continuance of their parents' rage,
+Which, but their children's end, nought could remove,
+Is now the two hours' traffic of our stage;
+The which if you with patient ears attend,
+What here shall miss, our toil shall strive to mend.
+</pre>
               <h2>SCENE I. Verona. A public place.</h2> 
               <p><i>Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</i></p>
               <h2>SAMPSON</h2>
