--- a/dz2.html
+++ b/dz2.html
@@ -22,7 +22,7 @@
             </p>
             <hr>
             <h2>Markup</h2>
-            <p><u>HTML</u> markup consists of several key components, including those called tags<i>(and their attributes)</i>, character-based data types, character references and entity references. <u>HTML</u> tags most commonly come in pairs like <xpm> <h1> and </h1></xpm>, although some represent empty elements and so are unpaired, for example <img>. The first tag in such a pair is the start tag, and the second is the end tag <i>(they are also called opening tags and closing tags)</i>.
+            <p><u>HTML</u> markup consists of several key components, including those called tags<i>(and their attributes)</i>, character-based data types, character references and entity references. <u>HTML</u> tags most commonly come in pairs like  &#8249;h1 &#8250; and  &#8249;/h1 &#8250;, although some represent empty elements and so are unpaired, for example <img>. The first tag in such a pair is the start tag, and the second is the end tag <i>(they are also called opening tags and closing tags)</i>.
             </p>
             <p>Another important component is the <u>HTML</u> <i>document type declaration,</i> which triggers standards mode rendering.</p>
             <p>The following is an example of the classic "Hello, World!" program:</p>
