--- a/сайт.html
+++ b/сайт.html
@@ -1,33 +1,12 @@
-<!DOCTYPE html> <!-- Объявление формата документа -->
-<html>
-
-<head> <!-- Техническая информация о документе -->
-    <meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
-    <title>Сайт визитка</title> <!-- Задаем заголовок документа -->
-    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
-    <script src="script.js"></script> <!-- Подключаем сценарии -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-<body> <!-- Основная часть документа -->
-    <footer>
-        <div style="text-align: center;">
-            <tr>
-                <th>
-                    <fieldset>
-                        <em>
-                            <h1>Визитка</h1>
-                        </em>
-
-                        <h2>Обо мне</h2>
-
-                        <p>Привет! Меня зовут Антон. Мне 23 года работаю в Surf Coffee </p>
-                        <p>Решил освоить новую профессию так как устал работать в общепите</p>
-                        <button></button>
-                        <img
-                            src="https://lh3.googleusercontent.com/a/AAcHTtfjHYHXIukJcOJrcUNNPAwIA1JBSoMC5r9gxrYy=s360-c-no">
-            </tr>
-            </th>
-            </fieldset>
-        </div>
-    </footer>
+<body>
+    
 </body>
 </html>
