--- a/сайт.html
+++ b/сайт.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="сайт.css">
+    <title>Mathematical formulas</title>
 </head>
 <body>
+    <header>
+        <div>
+            <h1>Mathematical formulas</h1>
+        </div>
+    </header>
+    <main>
+        <h3>Linear Equations</h3>
+        <p>
+            A linear equation is any equation that can be written in the form 
+        </p>
+       <h4 id="one"><span id="two"> ax + b = 0</span> </h4>
+        <p>where <span id="sp"> a</span> and <span id="sp">b</span> are real numbers and <span id="sp">x</span> is a variable. This form is sometimes called the standard form of a linear 
+            equation. Note that most linear equations will not start off in this form. , the variable may or may not be an <span id="sp">x</span> 
+            so don’t get too locked into always seeing an <span id="sp">x</span> there.</p>
+            <h4>Quadratic Equation</h4>
+            <p>The standard form of a quadratic equation looks like this:</p>
+            <h5 id="s"><span id="w">ax^2 + bx + c = 0  </span></h5>
+            <p>where <spam id="sp">a, b, c</spam> are known values and <span id="sp">x</span> is the variable or unknown (we don't know it yet). Also, <span id="sp">a</span> can't be 0.</p>
+            <h3>The area of a circle (A)</h3>
+            <p> (Pi) times the radius (r) squared:</p>
+            <h5>A = [sign] [sign] r^2  </h5>
+
+    </main>
     
 </body>
 </html>
