--- a/dz3.html
+++ b/dz3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dz3.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,12 +18,12 @@
         <th>6&hearts;</th>
     </tr>
     <tr>
-        <th>1</th>
-        <th>2</th>
-        <th>3</th>
-        <th>4</th>
-        <th>5</th>
-        <th>6</th>
+        <th>K&hearts;</th>
+        <th>Q&spades;</th>
+        <th>6&clubs;</th>
+        <th>K&spades;</th>
+        <th>A&hearts;</th>
+        <th>6&diams;</th>
     </tr>
    </table> 
 </body>
