--- a/dz3.html
+++ b/dz3.html
@@ -26,5 +26,9 @@
         <th>6&diams;</th>
     </tr>
    </table> 
+   <footer>
+    <h3>Footer</h3>
+    <p>Lorem ipsum dolor sit amet.</p>
+   </footer>
 </body>
 </html>
