--- a/work/work1.html
+++ b/work/work1.html
@@ -24,13 +24,14 @@
     </header>
 <!-- Основной контент -->
     <main>
-        <div class="heads_logo"></div>
+        <div class="heads_logo">
+            <div class="heads_cont"></div>
         <h3>Укрепление здоровья</h3>
-        <pre><h1>
+        <h1>
             Акватерапия
-            RitmStyle
-
-        </h1></pre>
+           <br> RitmStyle
+        </h1>
+        </div>
         <div class="siance"></div>
         <h1>Сеансы RitmStyle</h1>
         <div class="parent">
