--- a/work/work1.html
+++ b/work/work1.html
@@ -35,11 +35,11 @@
         <div class="siance"></div>
         <h1>Сеансы RitmStyle</h1>
         <div class="parent">
-            <div class="div1"></div>
-            <div class="div2"></div>
-            <div class="div3"></div>
-            <div class="div4"></div>
-            <div class="div5"></div>        
+            <div class="div1">Стандартый RitmStyle</div>
+            <div class="div2">RitmStyle для пар</div>
+            <div class="div3">RitmStyle для беременных</div>
+            <div class="div4">RitmStyle с полным погружением под воду</div>
+            <div class="div5">RitmStyle + красочная подводная фотоссесия</div>        
         </div>
         <div class="fedd"></div>
         <h1>Отзывы</h1>
