--- a/work/work1.html
+++ b/work/work1.html
@@ -24,13 +24,12 @@
     </header>
 <!-- Основной контент -->
     <main>
-        <div class="heads_logo">
-            <div class="heads_cont"></div>
-        <h3>Укрепление здоровья</h3>
-        <h1>
-            Акватерапия
-           <br> RitmStyle
-        </h1>
+        <div class="container">
+            <div class="text">
+        <p>Укрепление здоровья</p>
+            <p>Акватерапия<br>
+                RitmStyle</p>
+            </div>
         </div>
         <div class="siance"></div>
         <h1>Сеансы RitmStyle</h1>
