--- a/work/work1.html
+++ b/work/work1.html
@@ -31,8 +31,9 @@
                 RitmStyle</p>
             </div>
         </div>
-        <div class="siance"></div>
+        <div class="sianse">
         <h1>Сеансы RitmStyle</h1>
+        </div>
         <div class="parent">
             <div class="div1">Стандартый RitmStyle</div>
             <div class="div2">RitmStyle для пар</div>
@@ -40,12 +41,13 @@
             <div class="div4">RitmStyle с полным погружением под воду</div>
             <div class="div5">RitmStyle + красочная подводная фотоссесия</div>        
         </div>
-        <div class="fedd"></div>
+        <div class="fedd">
         <h1>Отзывы</h1>
+        </div>
         <div class="feed_content">
-            <div class="feed1"></div>
-            <div class="feed2"></div>
-            <div class="feed3"></div>
+            <div class="feed1">Александра Дмитриева <br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto consectetur adipisci sapiente ducimus molestias fuga, sed ea dicta quasi debitis, explicabo qui ipsam? Ipsam quibusdam assumenda perferendis error sint quasi sapiente ullam saepe soluta architecto voluptatum, atque numquam odio dolor ducimus illum repellendus accusamus facilis reiciendis, hic tempora eius veniam ad velit. Accusantium, perspiciatis quas! Eaque, qui? Nulla consequuntur temporibus quia commodi, quibusdam consectetur eos sunt numquam repellat accusantium amet tenetur beatae maiores quidem enim aperiam deleniti? Inventore mollitia dicta quia odit facere a at sint eum! Est modi esse optio, qui molestias rem, aperiam fuga dolor nemo culpa debitis?</div>
+            <div class="feed2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum expedita excepturi nostrum tempora eveniet ea, quia quaerat non, autem commodi magnam aliquid cumque quisquam fugit ipsum, error ducimus modi quis dolorem animi deserunt! Dolorem a dicta inventore dolorum minus sunt. Impedit tempore doloribus nesciunt consequuntur provident debitis, magnam architecto corrupti. Aut sint quaerat quo dicta tempore quas iusto enim cum! Quis iusto dolores voluptates eos assumenda expedita cum doloremque vero repudiandae quidem impedit, nobis maxime mollitia consequatur cupiditate adipisci omnis laborum molestias. Quaerat quae qui quisquam nesciunt repellat ad at, assumenda nihil? Eligendi natus facere illum expedita amet deleniti repellendus..</div>
+            <div class="feed3">Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="feed_nav"></div>
         
