--- a/work/work1.html
+++ b/work/work1.html
@@ -39,7 +39,8 @@
             <div class="div2">RitmStyle для пар</div>
             <div class="div3">RitmStyle для беременных</div>
             <div class="div4">RitmStyle с полным погружением под воду</div>
-            <div class="div5">RitmStyle + красочная подводная фотоссесия</div>        
+            <div class="div5">RitmStyle + красочная подводная фотоссесия</div>
+            <div class="div6"></div>        
         </div>
         <div class="fedd">
         <h1>Отзывы</h1>
@@ -51,22 +52,35 @@
         </div>
         <div class="feed_nav"></div>
         
-        <div class="about"></div>
+        <div class="about"><h1>Об RitmStyle</h1></div>
         <div class="about_cont1">
-            <p></p>
-            <img src="" alt="">
+            <p>RitmStyle массаж</p><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit provident minus laborum eum facere sed distinctio unde quia culpa. Praesentium omnis quo amet voluptates laudantium libero voluptatibus, ullam excepturi ratione hic labore velit beatae dolorem aliquam repellendus, nemo quod eius eligendi vel ipsa officiis.</p><br>
+                <p>Tempore architecto neque ipsa in eaque. Nulla, consequuntur doloribus atque qui placeat sint reprehenderit expedita excepturi labore repellendus quos nisi fugiat facilis odio harum ipsum obcaecati assumenda aspernatur odit quo, non quis illo officia. Ratione error culpa eveniet omnis, nihil commodi, molestiae alias distinctio voluptatum iure porro deserunt eligendi dignissimos possimus veniam fugit. Eius, commodi a.
+            </p>
         </div>
+          <div class=logo> <img src="../work/img adout.png" alt="logo1"></div>
+        
         <div class="about_cont2">
-            <p></p>
+            <p>RitmStyle гидротераппия</p><br>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore magni ratione qui tenetur minima? Cumque consequuntur voluptatibus velit. Non pariatur veniam deleniti doloribus impedit, tempore fugit exercitationem nostrum ab, ratione facere assumenda, repudiandae veritatis temporibus? Recusandae, quibusdam reiciendis minus est quaerat fugiat accusantium! Illo, delectus vitae nihil sit alias aliquid nesciunt?</p><br> 
+                <p>Dolorem perferendis eum cum vel sequi tempora adipisci quae sed odio minus enim facilis impedit repellendus, voluptate, atque natus, dolor ipsa deleniti doloremque? Provident rerum quas vero temporibus modi ex iste quis. Eaque ipsa accusantium sed praesentium nisi fuga, dolorum nulla deserunt quod corrupti vero ut sapiente ea maiores!</p>
         </div>
+        <div class="logo2"><img src="../work/img adout.png" alt="logo"></div>
+
         <div class="ptice">
             <h1>Стоимость сеанса</h1>
+        </div>
+        <div class="and"><img src="../work/and.png" alt="cr">
+        <h2>Подарочный сертификат</h2>
+            </div>
+        <div class="vid">
             <ul>
-                <li>RitmStyle с погружением 1000р</li>
-                <li>Абонемент на RitmStyle 5000р</li>
-                <li>RitmStyle для пар 6000ры</li>
-                <li>RitmStyle для беременных 13500р</li>
-                <li>RitmStyle + фотоссесия 11500р</li>
+                <li><h2>RitmStyle с погружением 1000р</h2></li>
+                <li><h2>Абонемент на RitmStyle 5000р</h2></li>
+                <li><h2>RitmStyle для пар 6000р</h2></li>
+                <li><h2>RitmStyle для беременных 13500р</h2></li>
+                <li><h2>RitmStyle + фотоссесия 11500р</h2></li>
             </ul>
         </div>
     </main>
