--- a/work/index.html
+++ b/work/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- меню -->
     <header>
-        <img src="../work/img/Group 1.png" alt="heads_logo">
+        <img src="./work/img/Group 1.png" alt="heads_logo">
         <nav>
             <a href="">Главная</a>
             <a href="">Сеансы</a>
@@ -59,19 +59,19 @@
                 <p>Tempore architecto neque ipsa in eaque. Nulla, consequuntur doloribus atque qui placeat sint reprehenderit expedita excepturi labore repellendus quos nisi fugiat facilis odio harum ipsum obcaecati assumenda aspernatur odit quo, non quis illo officia. Ratione error culpa eveniet omnis, nihil commodi, molestiae alias distinctio voluptatum iure porro deserunt eligendi dignissimos possimus veniam fugit. Eius, commodi a.
             </p>
         </div>
-          <div class=logo> <img src="../work/img/img adout.png " alt="logo1"></div>
+          <div class=logo> <img src="./work/img/img adout.png " alt="logo1"></div>
         
         <div class="about_cont2">
             <p>RitmStyle гидротераппия</p><br>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore magni ratione qui tenetur minima? Cumque consequuntur voluptatibus velit. Non pariatur veniam deleniti doloribus impedit, tempore fugit exercitationem nostrum ab, ratione facere assumenda, repudiandae veritatis temporibus? Recusandae, quibusdam reiciendis minus est quaerat fugiat accusantium! Illo, delectus vitae nihil sit alias aliquid nesciunt?</p><br> 
                 <p>Dolorem perferendis eum cum vel sequi tempora adipisci quae sed odio minus enim facilis impedit repellendus, voluptate, atque natus, dolor ipsa deleniti doloremque? Provident rerum quas vero temporibus modi ex iste quis. Eaque ipsa accusantium sed praesentium nisi fuga, dolorum nulla deserunt quod corrupti vero ut sapiente ea maiores!</p>
         </div>
-        <div class="logo2"><img src="../work/img/img adout.png " alt="logo"></div>
+        <div class="logo2"><img src="./work/img/img adout.png " alt="logo"></div>
 
         <div class="ptice">
             <h1>Стоимость сеанса</h1>
         </div>
-        <div class="and"><img src="../work/img/and.png" alt="cr">
+        <div class="and"><img src="./work/img/and.png" alt="cr">
         <h2>Подарочный сертификат</h2>
             </div>
         <div class="vid">
@@ -88,7 +88,7 @@
         </script>
         <script src="script.js"></script>
 
-        <div class="end"><img src="../work/img/end.png"></div>
+        <div class="end"><img src="./work/img/end.png"></div>
         <div class="end2">
             <h3>Бассейны WorldClass</h3>
             <ul>
@@ -98,7 +98,7 @@
             </ul>
             <button>Записаться на прием</button>
         </div>
-        <div class="end3"><img src="../work/img/end.png"></div>
+        <div class="end3"><img src="./work/img/end.png"></div>
         <div class="end4">
             <h3>Бассейн на "На Гороховой"</h3>
             <ul>
