--- a/work/tt.html
+++ b/work/tt.html
@@ -8,8 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="my-element">
-        12334
+    
+    </div>
+    <div class="wrap">
+        <h1>Welcom</h1>
+        <div class="door door_left"></div>
+        <div class="door door_right"></div>
     </div>
 
 
