--- a/human.html
+++ b/human.html
@@ -24,19 +24,21 @@
          </nav>
     </header>
     <main>
-        <div class="shop">
+        <div class="shop"><img src="./img/gg.png" alt="">
             <div class="shop2">
                 <h1>Our best-selling refillable deodorant, in a new sent for summer <br>Shop Lemongrass </h1>
             <button>Shop Now</button>
             </div>
         </div>
-        <div id="des">
+        <div class="des">
+            <hr>
             <h1>
                 Designer to reduce single-use <br>plastic waste in your daily routine.
             </h1>
             <h1>Scientifically-proven to perform</h1>
         </div>
         <div class="shower">
+            
             <h2>
                 shower routine ser - $46
             </h2>
@@ -44,6 +46,15 @@
                 All-natural shampo, conditioner ,<br> body wash to nourrish your hair <br> & skin. get $26 off
             </p>
             <button>Quick Add</button>
+        </div>
+        <div class="summer">
+            <h2>
+                summer routine - $50
+            </h2>
+            <p>
+                Best sellers that are great for <br> in our summer scent.<br>
+                                                            get $15 off
+            </p>
         </div>
     </main>
     
