--- a/human.html
+++ b/human.html
@@ -55,6 +55,7 @@
                 Best sellers that are great for <br> in our summer scent.<br>
                                                             get $15 off
             </p>
+            <button>Quick Add</button>
         </div>
     </main>
     
